<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2011 United States Government as represented by the Administrator of the
    National Aeronautics and Space Administration.
    All Rights Reserved.

    $Id: strings.xml 83 2011-10-06 15:37:57Z ccrick $
-->
<resources>

    <string name="app_name">WorldDroid³</string>
    <string name="main_activity_name">WorldDroid³</string>
    <string name="dashboard">Dashboard</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="offglobe">Off globe</string>
    <string name="spacer"></string>
    <string name="menu_action_text_trilogis">TRILOGIS</string>
    <string name="menu_action_camera">TRILOGIS</string>
    <string name="menu_action_text_show_toc">TOC</string>
    <string name="menu_action_text_wms">Add WMS</string>
    <string name="label_wms_dialog_list_title">WMS Available Layers</string>
    <string name="label_toc_title">Table of Contents (Layers)</string>
    <string name="btn_get_capabilities">Get Capabilities</string>
    <string name="toc_default_checkbox_text">&#8230;</string>
    <string name="toc_drag_icon_content_description">Drag Item</string>
    <string name="toc_view_delete_content_description">Delete Layer</string>
    <string name="title_activity_ar">ARActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="take_picture">Take Picture</string>
    <string name="sensors_visibility">Sensors</string>
    <string name="waiting_gps">Waiting for GPS</string>
    <string name="downloading_peaks">Downloading Peaks</string>
    <string name="no_camera_available">No Camera available</string>
    <string name="camera_resume_error">Camera cannot be resumed</string>
    <string name="gps_dialog_title">GPS Required</string>
    <string name="gps_dialog_body">This application require the GPS! Activate it?</string>
    <string name="gps_dialog_yes">Yes</string>
    <string name="gps_dialog_no">No</string>
    <string name="network_dialog_title">Network Required</string>
    <string name="network_dialog_body">This device is offline and this application require Network connection. Please activate it.</string>
    <string name="network_dialog_retry">Retry</string>
    <string name="network_dialog_cancel">Cancel</string>
    <string name="button_settings">Settings</string>
    <string name="download_error">Error during peaks download</string>
    <string name="azimuth">Azimuth</string>
    <string name="pitch">Pitch</string>
    <string name="roll">Roll</string>
    <string name="default_corrections">Reset</string>
    <string name="all_peaks">All</string>
    <string name="default_peaks">Best</string>
    <string name="no_peaks">None</string>
    <string name="saving_picture">Saving Picture</string>
    <string name="location_update">Matching algorithm</string>
    <string name="title_activity_poiview">POIView</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>